@@ -1,4 +1,4 @@
-.\" $OpenBSD: sftp.1,v 1.47 2003/10/13 08:22:25 markus Exp $
+.\" $OpenBSD: sftp.1,v 1.48 2003/12/09 21:53:37 markus Exp $
 .\"
 .\" Copyright (c) 2001 Damien Miller.  All rights reserved.
 .\"
@@ -158,7 +158,6 @@ For full details of the options listed below, and their possible values, see
 .It HostKeyAlias
 .It HostName
 .It IdentityFile
-.It KeepAlive
 .It LogLevel
 .It MACs
 .It NoHostAuthenticationForLocalhost
@@ -173,6 +172,7 @@ For full details of the options listed below, and their possible values, see
 .It RSAAuthentication
 .It SmartcardDevice
 .It StrictHostKeyChecking
+.It TCPKeepAlive
 .It UsePrivilegedPort
 .It User
 .It UserKnownHostsFile
