@@ -34,7 +34,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: ssh.1,v 1.179 2003/11/24 00:16:35 dtucker Exp $
+.\" $OpenBSD: ssh.1,v 1.180 2003/12/09 21:53:37 markus Exp $
 .Dd September 25, 1999
 .Dt SSH 1
 .Os
@@ -634,7 +634,6 @@ For full details of the options listed below, and their possible values, see
 .It HostKeyAlias
 .It HostName
 .It IdentityFile
-.It KeepAlive
 .It LocalForward
 .It LogLevel
 .It MACs
@@ -651,6 +650,7 @@ For full details of the options listed below, and their possible values, see
 .It RSAAuthentication
 .It SmartcardDevice
 .It StrictHostKeyChecking
+.It TCPKeepAlive
 .It UsePrivilegedPort
 .It User
 .It UserKnownHostsFile
